# FastAPI_SQL_builder_based

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/: routes.py
app/api/endpoints/: health.py
app/core/: config.py  events.py
app/core/settings/: configurations.py  development.py  production.py  test.py
app/db/: events.py
app/db/alembic/: env.py
app/db/queries/: queries.pyi
app/db/sqlalchemy_models/: base.py
app/models/domain/: mixins.py
app/models/schemas/: responses.py
app/resources/: strings.py
app/services/: httpx_client.py
tests/: conftest.py
tests/test_services/: test_httpx_client.py
